--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,7 +32,7 @@
 
     <title>Bem vindos | Plasticine</title>
   </head>
-  <body class="hold-transition sidebar-mini">
+  <body class="hold-transition sidebar-mini" style="background-color: #f4f6f9">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"><div class="wrapper"></div></div>
 
